<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Virtual Casino</string>
    <string name="slots">SLOTS</string>
    <string name="roulette">ROULETTE</string>
    <string name="blackjack">BLACKJACK</string>
    <string name="funds">"Funds: </string>
    <string name="back_button">Back</string>
    <string name="max">Max</string>
    <string name="half">1/2</string>
    <string name="add1000">+1000</string>
    <string name="add100">+100</string>
    <string name="add10">+10</string>
    <string name="clear">Clear</string>
    <string name="balance">Balance: </string>
    <string name="bet">Bet</string>
    <string name="add50">+50</string>
    <string name="add500">+500</string>
    <string name="wager">WAGER:</string>
    <string name="spin">SPIN!</string>
    <string name="stop">Stop</string>
</resources>